--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,25 @@
         <!-- maven-compiler-plugin config -->
         <maven.compiler.source>7</maven.compiler.source>
         <maven.compiler.target>7</maven.compiler.target>
+
+        <mockito.version>1.9.5</mockito.version>
+        <testng.version>6.8.7</testng.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <profiles>
         <!-- Force new version of plugins for a release -->
